Added the moqigod test 	modified:   DWARFTEST.sh 	modified:   moqigod/README
For local tests. not important.
	modified:   RUNVAL

New baseline executable
	modified:   dwarfdump-i386-freebsd.O
	modified:   dwarfdump-s390.O
	modified:   dwarfdump-x86_64-freebsd.O
	modified:   dwarfdump-x86_64-ubuntu.O

--- a/moqigod/README
+++ b/moqigod/README
@@ -1,6 +1,9 @@
 Report and example received
 24 March 2022.
 
+the problem is the count of directories in
+a line table header is zero (very unusual,
+maybe impossible as compiler output) due to fuzzing of the object file.
 
 
 Execute the command：./dwarfdump example
